cmake_minimum_required(VERSION 3.13)

project(redis-starter-cpp)

file(GLOB_RECURSE SOURCE_FILES src/*.cpp)

set(CMAKE_CXX_STANDARD 23) # Enable the C++23 standard
set(THREADS_PREFER_PTHREAD_FLAG ON)

find_package(Threads REQUIRED)
find_package(asio CONFIG REQUIRED)
find_package(OpenSSL REQUIRED)

add_executable(redis ${SOURCE_FILES})

target_include_directories(redis PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)

target_link_libraries(redis PRIVATE asio asio::asio)
target_link_libraries(redis PRIVATE Threads::Threads)
target_link_libraries(redis PRIVATE OpenSSL::SSL OpenSSL::Crypto)